dark mode and ui fix

--- a/web/src/css/custom.css
+++ b/web/src/css/custom.css
@@ -6,18 +6,22 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #fe8801;
+  --ifm-color-primary: #f39422;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 .footer {
-  background-color: #000830;
+  background-color: #242526;
+}
+
+[data-theme="dark"] .footer {
+  background-color: #080e1b;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  background-color: #000830;
+  background-color: #0a1120;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
@@ -105,8 +109,8 @@
     no-repeat;
 }
 
-.docusaurus-mt-lg {
-  background-color: #fff;
+[data-theme="dark"] .card {
+  background-color: #0a1120;
 }
 
 .card {
@@ -114,7 +118,7 @@
 }
 
 .navbar {
-  background-color: rgba(0, 8, 48, 0.7);
+  background-color: rgba(0, 11, 20, 0.7);
   backdrop-filter: blur(3px);
   display: flex;
 }
